--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,11 @@
 .main {
-  background: #ccc;
+  background: #efefef;
 }
 
 .main section {
-  background: #777;
+  background: #ccc;
 }
 
 .main section + section {
-  background: #333;
+  background: #777;
 }
